2002-03-21 Daniel Horn <hellcatv@hotmail.com>
	* Happy birthday Debra
	* Made it so that all AI classes who wish to "talk back" inherit from
	       CommunicatingAI
	* If you wish to select responses not randomly, override the virtual selectCommunicationMessage
	* Added mood swinging... and they get mad if you shoot at them
	* Added Request Clearence to land
	
2002-03-20 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* moved the static var SplashScreen from main.cpp:bootstrap_main_loop
	  to global namespace
	* the same with the TextPlane that bootstrap_draw uses
	* bootstrap_draw uses this to check if it should draw
	* this way, a call to bootstrap_draw can be added to Texture()
	* see main.cpp:186 aux_texture.cpp:203
	* Bug: when the background is loaded, there's a short pic of
	  the environment map

	
2002-03-20 Daniel Horn <hellcatv@hotmail.com>
	* Added intiial comm support
	* Todo:
	*  a) make it so that the communications load from an XML file
	* b) make it so that Order::AdjustRelationTo () does SOMETHING (so that at 
	     least they target you if you say something bad or the like...eventually it 
	     needs to modify some local state about the relationship between your race and 
	     theirs...or at least your ship and theirs)
	* c) Alex this might be your job: make it so the other AI's respond to 
	      messages...currently only AggressiveAI responds to messages
	* d) someday we might want to color code messages

	
2002-03-19 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* modified src/Makefile.am (bindir was screwed up)
	* modified mission/Makefile.am (bindir)
	* added missile.h to src/cmd/Makefile.am
	* modified vegastrike.spec
	* added vegastrike-data.spec
	* improved some modules (unit==NULL checks)

2002-03-09 Daniel Horn <hellcatv@hotmail.com>
	* Begun adding communications to AI
	* Fixed Segfault in LoadUniverse's call to mission which may create starships without an active starsystem